Fix Meridian Logo overlap issue LTS-93

--- a/opennms-webapp/src/main/scss/opennms-theme.scss
+++ b/opennms-webapp/src/main/scss/opennms-theme.scss
@@ -398,17 +398,7 @@ a.list-group-item.active:focus {
 
 .navbar-brand {
   line-height: $navbar-logo-height; /* same as the logo image */
-  height: $navbar-logo-height;
-  padding: 10px !important;
-  /*
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  */
+  padding: 10px 10px 0 10px !important;
 }
 
 #navbar {
